src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <picklist>
            <picklistValues>
                <fullName>Busy Signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cold_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cold Call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Limited to 255 Characters. Displays notes in the related lists</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Phase__c</fullName>
        <label>Marketing Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Confidentiality Agreement Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Summary Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering Memorandum Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive-By Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter Of Intent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Communication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>First Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyside Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Appointment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSF_ID__c</fullName>
        <externalId>true</externalId>
        <label>OSF ID</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>